refactor(all files): better structure, esp. js in /dist

--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,6 @@
   </head>
   <body class="bg-sand font-sans text-ink">
     <div id="root"></div>
-    <script type="module" src="reminder.js"></script>
+    <script type="module" src="dist/popup.js"></script>
   </body>
 </html>
