--- a/reminder.html
+++ b/reminder.html
@@ -7,6 +7,6 @@
   </head>
   <body class="bg-sand font-sans text-ink">
     <div id="root"></div>
-    <script type="module" src="popup.js"></script>
+    <script type="module" src="dist/reminder.js"></script>
   </body>
 </html>
